Fix shift toggle not updating on click

--- a/style.css
+++ b/style.css
@@ -1,108 +1,108 @@
 body {
-    background-color: #181818;
-    margin: 0;
+  background-color: #181818;
+  margin: 0;
 }
 
 #content-wrapper {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-family: 'Times New Roman', Times, serif;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-family: "Times New Roman", Times, serif;
 }
 
 table {
-    color: white;
-    font-size: 1.5vw;
-    border: 2px solid #aaa;
-    border-collapse: collapse;
+  color: white;
+  font-size: 1.5vw;
+  border: 2px solid #aaa;
+  border-collapse: collapse;
 }
 
 h1 {
-    position: absolute;
-    left: 50%;
-    top: 12%;
-    transform: translate(-50%, -50%);
-    margin: 0;
-    color: #fff;
-    font-size: 2.5vw;
-    text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 12%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  color: #fff;
+  font-size: 2.5vw;
+  text-align: center;
 }
 
 td {
-    border: 2px solid #aaa;
-    padding: 1vh 1vw;
+  border: 2px solid #aaa;
+  padding: 1vh 1vw;
 }
 
-#shift-toggle{
-    max-width: 9vh;
-    min-width: 9vh;
-    aspect-ratio: 3 / 1;
+#shift-toggle {
+  max-width: 9vh;
+  min-width: 9vh;
+  aspect-ratio: 3 / 1;
 }
 
 .toggle-wrapper {
-    width: 100%;
-    height: 100%;
-    background-color: #aaa;
-    border-radius: 100px;
-    padding: 0.3em 0.5em;
-    cursor: pointer;
+  width: 100%;
+  height: 100%;
+  background-color: #aaa;
+  border-radius: 100px;
+  padding: 0.3em 0.5em;
+  cursor: pointer;
 }
 
-.toggle-wrapper[data-state="0"] .toggle-handle {
-    left: 0;
-    transform: translate(0, -50%);
+.toggle-wrapper[data-state="morning"] .toggle-handle {
+  left: 0;
+  transform: translate(0, -50%);
 }
 
-.toggle-wrapper[data-state="1"] .toggle-handle {
-    left: 100%;
-    transform: translate(-100%, -50%);
+.toggle-wrapper[data-state="afternoon"] .toggle-handle {
+  left: 100%;
+  transform: translate(-100%, -50%);
 }
 
 .toggle-handle {
-    height: 3vh;
-    aspect-ratio: 1;
-    background-color: #fff;
-    border-radius: 100%;
-    transition: 300ms ease-out;
-    position: relative;
-    top: 50%;
+  height: 3vh;
+  aspect-ratio: 1;
+  background-color: #fff;
+  border-radius: 100%;
+  transition: 300ms ease-out;
+  position: relative;
+  top: 50%;
 }
 
-#input-wrapper{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5vh;
+#input-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5vh;
 }
 
 #radio-buttons-wrapper {
-    display: flex;
-    margin: 1vw;
-    justify-content: center;
-    gap: 0.7vw;
+  display: flex;
+  margin: 1vw;
+  justify-content: center;
+  gap: 0.7vw;
 }
 
 .radio-button {
-    background-color: #313131;
-    font-size: 3vh;
-    color: #fff;
-    padding: 1vh;
-    border-radius: 100%;
-    cursor: pointer;
-    user-select: none;
+  background-color: #313131;
+  font-size: 3vh;
+  color: #fff;
+  padding: 1vh;
+  border-radius: 100%;
+  cursor: pointer;
+  user-select: none;
 }
 
-.radio-button:hover{
-    background-color: #525252;
+.radio-button:hover {
+  background-color: #525252;
 }
 
-.radio-button.selected{
-    background-color: #757575;    
+.radio-button.selected {
+  background-color: #757575;
 }
